lanecwe-Prod/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Opportunity.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Host_NA_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag for opportunities for Active Host - GlobalMeet Web.</description>
        <inlineHelpText>A flag for opportunities for Active Host - GlobalMeet Web.</inlineHelpText>
        <label>Active Host</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_on_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>x-Add-on/Feature</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Value__c</fullName>
        <description>andy = updated from = Minutes to contains Minute 4/24/2014</description>
        <formula>/*****************************************************/ 
/*Annual Value || Annual_Value__c*/ 
IF( 
AND( 
CONTAINS(TEXT(Unit_Type__c), &quot;Minute&quot;), 
Min_Commit__c = False 
), 0, 
IF(ISPICKVAL(Unit_Type__c, &quot;Contract&quot;), 0, 
IF(ISPICKVAL(Billing_Frequency__c, &quot;One Time Event&quot;), 0, 
IF(ISPICKVAL(Unit_Type__c, &quot;Ancillary&quot;), 0, 
IF(isReportable_Text__c = &quot;Invalid&quot;, 0, 
IF( Opp_Owner_Region__c = &quot;APAC&quot; &amp;&amp; ISPICKVAL(Unit_Type__c, &quot;Licenses&quot;) &amp;&amp; Min_Commit__c = False &amp;&amp;  CreatedById &lt;&gt; &quot;005300000060JMO&quot;, 0,
IF( 
ISPICKVAL(Billing_Frequency__c,&apos;Annually&apos;), 
New_Sales_Price__c* New_Quantity__c, IF( 
ISPICKVAL(Billing_Frequency__c,&apos;Quarterly&apos;), 
New_Sales_Price__c * New_Quantity__c * 4, 
IF( 
AND( 
ISPICKVAL(Billing_Frequency__c, &quot;One Time Event&quot;), 
Contract_Term__c &gt; 11 
), 
New_Sales_Price__c* New_Quantity__c, 
IF( Contract_Term__c &gt; 12, New_Sales_Price__c* New_Quantity__c*12, 
New_Sales_Price__c* New_Quantity__c * Contract_Term__c 
) 
) 
) 
) 
) 
) 
) 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Committed_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Loader_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object.  Setting this field should have no other impact.</description>
        <inlineHelpText>Just a simple flag to toggle on or off to fire triggers and/or workflows on the object.  Setting this field should have no other impact.</inlineHelpText>
        <label>Data Loader Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editable__c</fullName>
        <formula>IF(
Opportunity.IsClosed= True, &quot;No&quot;,
IF(
Existing_Service__c = True, &quot;Yes&quot;,
IF(
isReportable_Text__c = &quot;Valid&quot; &amp;&amp; ! ISBLANK(Quote_Line_Item__c) , &quot;Yes&quot;,
IF(
isReportable_Text__c = &quot;Invalid&quot;, &quot;No&quot;, 
IF(
isReportable_Text__c = &quot;Valid&quot; &amp;&amp;  ISBLANK(Quote_Line_Item__c)&amp;&amp;  Opportunity.Count_of_Quote__c = 0 , &quot;Yes&quot;,
IF(
isReportable_Text__c = &quot;Valid&quot; &amp;&amp;  ISBLANK(Quote_Line_Item__c), &quot;No&quot;,
&quot;Error in Formula&quot;
))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Editable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enter 2 Products- 1st with the box checked for Existing Service, 2nd for New Service being added</inlineHelpText>
        <label>Existing Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historic_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historic Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_Message_Field__c</fullName>
        <description>Display custom message when product line item is a legacy value.</description>
        <formula>IF(Historic_Line_Item__c = TRUE, &apos;Please create new line items and delete this line item.&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historic Message Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Bill_Date__c</fullName>
        <inlineHelpText>Expected date (confirmed by IST or PMO) when GCS customer will be initially billed for this new service</inlineHelpText>
        <label>Initial Bill Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_modified_Date_by_non_admin__c</fullName>
        <label>Last modified Date by (non-admin)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_MRR__c</fullName>
        <label>Legacy MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LicenseSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LicenseSet</label>
        <referenceTo>LicenseSet__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Item_Description__c</fullName>
        <label>Line Item Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <formula>/*****************************************************/
/*MRR || MRR__c*/
/*IF( 
AND( 
ISPICKVAL(Unit_Type__c, &quot;Minutes&quot;), 
Min_Commit__c = False 
), 0, 
*/IF( 
Historic_Line_Item__c = TRUE, 
Legacy_MRR__c, 
IF(isReportable_Text__c = &quot;Invalid&quot;, 0, 
IF( 
Contract_Term__c = 0, 
New_Sales_Price__c* New_Quantity__c, 
IF(
ISPICKVAL(Billing_Frequency__c,&apos;Annually&apos;), 
(New_Sales_Price__c* New_Quantity__c)/12,
IF(
ISPICKVAL(Billing_Frequency__c ,&apos;Quarterly&apos;),
((New_Sales_Price__c* New_Quantity__c)/3),
New_Sales_Price__c* New_Quantity__c
) 
) 
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MRR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>May need to enter 2 Products- 1st with the box checked for the Min. Commit amount, 2nd if necessary, for estimated amount</inlineHelpText>
        <label>Min. Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Sales_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Owner_Region__c</fullName>
        <description>set via WFR so that we can leverage the owner region from Opportunity.  Small hole in this that if the owner region changed away from or to APAC it wouldnt update unless someone updates teh specific opp product  -Andy</description>
        <label>Opp Owner Region</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Product Family</label>
        <referenceTo>OpportunitySolution__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>x-Package</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Family)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name1__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>x-Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RW_Product_Name__c</fullName>
        <description>Used to pass bill freq. and Term to SFDC from Relayware.</description>
        <label>PC Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_18_Opp_Prod_ID__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC 18 Opp Prod ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Product_Revenue__c</fullName>
        <formula>IF( 
AND( 
isReportable_Text__c = &apos;Valid&apos;, 
Existing_Service__c = false 
), 
MRR__c * Contract_Term__c, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Product Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price_Create_Only__c</fullName>
        <label>Unit Price (Create/Edit Only)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Type_Rollup__c</fullName>
        <description>Temporary field to fix short-term reporting issue.</description>
        <formula>IF(
ISPICKVAL(Unit_Type__c, &quot;Minute&quot;), &quot;Minutes&quot;,
IF(
ISPICKVAL(Unit_Type__c, &quot;Month&quot;), &quot;Licenses&quot;,
IF(
ISPICKVAL(Unit_Type__c, &quot;Event&quot;), &quot;Minutes&quot;,
IF(
ISBLANK(TEXT(Unit_Type__c)), &quot;Minutes&quot;, TEXT(Unit_Type__c)
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Type Rollup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ancillary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minutes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Over_Term__c</fullName>
        <description>andy = updated from = Minutes to contains Minute 4/24/2014</description>
        <formula>/*****************************************************/ 
/*Product TCV || Value_Over_Term__c*/ 
IF(Historic_Line_Item__c = TRUE, 0, 
IF(isReportable_Text__c = &quot;Invalid&quot;, 0, 
IF(ISPICKVAL(Billing_Frequency__c, &quot;One Time Event&quot;), 0, 
IF(ISPICKVAL(Unit_Type__c, &quot;Ancillary&quot;), 0, 
IF(ISPICKVAL(Unit_Type__c, &quot;Contract&quot;), 0, 
IF(Contains(TEXT(Unit_Type__c), &quot;Minute&quot;) &amp;&amp; Min_Commit__c = False, 0,
IF( Opp_Owner_Region__c = &quot;APAC&quot; &amp;&amp;  ISPICKVAL(Unit_Type__c, &quot;Licenses&quot;) &amp;&amp; Min_Commit__c = False &amp;&amp; CreatedById &lt;&gt; &quot;005300000060JMO&quot;, 0,
IF(ISPICKVAL(Billing_Frequency__c ,&apos;Monthly&apos;),New_Sales_Price__c*New_Quantity__c*Contract_Term__c, 
IF(ISPICKVAL(Billing_Frequency__c ,&apos;Quarterly&apos;),((New_Sales_Price__c* New_Quantity__c)/3)* Contract_Term__c, 
IF(ISPICKVAL(Billing_Frequency__c ,&apos;Annually&apos;),New_Sales_Price__c* New_Quantity__c*( Contract_Term__c /12),New_Sales_Price__c*New_Quantity__c 
) 
) 
) 
) 
) 
) 
) 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product TCV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X100_Ramp_Date__c</fullName>
        <inlineHelpText>Expected date (confirmed by IST or PMO) when GCS customer will be billed full MRR for this new service</inlineHelpText>
        <label>100% Ramp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only for Records that have a Q/C relationship.  If not checked reps will get a VR error stating they cannot edit details here and will need to edit on the Q/C record instead.</description>
        <label>isEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isReportable_Text__c</fullName>
        <defaultValue>&quot;Valid&quot;</defaultValue>
        <label>Line Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isUncommittedMinutes__c</fullName>
        <description>Used for Jeff Reese Slicer Report.  Used to exclude the 2nd Min. Commit Product that is Uncommitted from the report.  Will show as True whenever there is at least 1 OPLI that has a min. commit = True and its Unit Type is Minutes &amp; the Min. Commit for this is false and the Unit Type is minutes.</description>
        <formula>IF(
Min_Commit__c = False &amp;&amp; CONTAINS(TEXT(Unit_Type__c), &quot;Minute&quot;) &amp;&amp;  Opportunity.Count_of_OPLI_0_TCV_Minutes__c &gt; 0, True, False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isUncommittedMinutes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>legacy_Item__c</fullName>
        <description>This field is for legacy reporting purposes.</description>
        <label>legacy_Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legacy_Number_of_Licenses_Users__c</fullName>
        <description>This field is for legacy reporting purposes.</description>
        <label>legacy_Number_of_Licenses_Users</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>z_Source__c</fullName>
        <label>z-Source</label>
        <picklist>
            <picklistValues>
                <fullName>Salesgateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <validationRules>
        <fullName>Acceptable_Unit_Types_if_Prod_Video</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
CONTAINS( Product2.Name , &quot;Video&quot;),
!ISPICKVAL(Unit_Type__c, &quot;Device(s)&quot;),
!ISPICKVAL(Unit_Type__c, &quot;Minutes&quot;),
!ISPICKVAL(Unit_Type__c, &quot;Event&quot;), 
$User.Override_Validation_Rules__c = false, 
!ISPICKVAL(Unit_Type__c, &quot;Ancillary&quot;)
)</errorConditionFormula>
        <errorDisplayField>Unit_Type__c</errorDisplayField>
        <errorMessage>The Unit Type must be set to Device(s), Event, Minutes, or Ancillary when a Video Product is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Use_Video_Unit_Types</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
!CONTAINS( Product2.Name , &quot;Video&quot;),
$User.Override_Validation_Rules__c = false, 
ISPICKVAL(Unit_Type__c, &quot;Device(s)&quot;)
)</errorConditionFormula>
        <errorDisplayField>Unit_Type__c</errorDisplayField>
        <errorMessage>The Unit Type can only be set to Device(s) when a Video Product is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_select_Quarterly_in_NA</fullName>
        <active>true</active>
        <description>updated error message 9/15</description>
        <errorConditionFormula>AND( 
OR(
Opportunity.Owner_Region__c = &quot;NA&quot;, 
ISPICKVAL(Opportunity.Channel__c, &quot;Canada&quot;)
),
Opportunity.Count_of_Min_Commit_Quarterly__c = 0,
Min_Commit__c = false,
ISPICKVAL(Billing_Frequency__c, &quot;Quarterly&quot;), 
ISBLANK(Package__c),
$User.Override_Validation_Rules__c = false
)</errorConditionFormula>
        <errorDisplayField>Billing_Frequency__c</errorDisplayField>
        <errorMessage>The value of Quarterly cannot be selected unless Min. Commit is checked on either this record or another existing record .  Please select another value before continuing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_set_Webinar_Bundle_NOT_Lic</fullName>
        <active>true</active>
        <description>Enforce can only use unit type of licenses for American: Web: GlobalMeet Webinar</description>
        <errorConditionFormula>AND(
NOT(
ISPICKVAL(Unit_Type__c, &quot;Licenses&quot;)),
CONTAINS(Product2.Name, &quot;Bundle: GlobalMeet Webinar&quot;)
)</errorConditionFormula>
        <errorDisplayField>Unit_Type__c</errorDisplayField>
        <errorMessage>The Unit Type must be Licenses for the product selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_set_Webinar_Web_NOT_Lic_Min</fullName>
        <active>true</active>
        <description>Enforce can only use unit type of licenses or Minute(s) for American: Web: GlobalMeet Webinar</description>
        <errorConditionFormula>AND(
NOT(
ISPICKVAL( Unit_Type__c , &quot;Licenses&quot;)),
NOT(
CONTAINS(TEXT(Unit_Type__c), &quot;Minute&quot;)
),
CONTAINS(Product2.Name, &quot;Web: GlobalMeet Webinar&quot;)
)</errorConditionFormula>
        <errorDisplayField>Unit_Type__c</errorDisplayField>
        <errorMessage>The Unit Type must be Licenses OR Minutes for the product selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Term_Multiple_of_12</fullName>
        <active>true</active>
        <description>When the Billing Frequency selected is &quot;Annually&quot;, the Contract Term selected must be a multiple of 12 (i.e. 12, 24, 36, 48, etc.)</description>
        <errorConditionFormula>IF(AND( ISPICKVAL(Billing_Frequency__c , &apos;Annually&apos;) , MOD(Contract_Term__c,12) &lt;&gt;0, $User.Override_Validation_Rules__c = False ),True,False)</errorConditionFormula>
        <errorDisplayField>Contract_Term__c</errorDisplayField>
        <errorMessage>When the Billing Frequency selected is Annually, the Contract Term selected must be a multiple of 12</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Term_must_be_greater_than_zero</fullName>
        <active>true</active>
        <description>Contract Term must be greater than zero</description>
        <errorConditionFormula>AND (Contract_Term__c  &lt;= 0, $User.Override_Validation_Rules__c = False )</errorConditionFormula>
        <errorDisplayField>Contract_Term__c</errorDisplayField>
        <errorMessage>Contract Term must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GCS_Ramp_Dates_Required</fullName>
        <active>true</active>
        <description>Initial Bill Date and 100% Ramp Date fields are required when Existing Service = False and (GCS Prob % = 90 or GCS Opp Stage = Closed Won)</description>
        <errorConditionFormula>AND($User.Override_Validation_Rules__c = False,
$Permission.GCS_Read_Write_Ramp_Dates,
Existing_Service__c = False,
OR(ISBLANK(Initial_Bill_Date__c),
ISBLANK(X100_Ramp_Date__c)),
OR(CONTAINS(TEXT(Opportunity.Prob_Input__c),&apos;90&apos;),
CONTAINS(TEXT(Opportunity.Opp_Stage__c),&apos;Closed Won&apos;)))</errorConditionFormula>
        <errorMessage>Both Initial Bill Date and 100% Ramp Date are required for any product that is not an Existing Service before setting Prob% to 90 or higher or Status to Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_Down_Opportunity_Line_Items</fullName>
        <active>true</active>
        <description>When Opportunity Stage is &quot;Closed Won&quot;, user cannot edit, delete, etc. any Opportunity Products.</description>
        <errorConditionFormula>AND(
$User.Override_Validation_Rules__c = False,
NOT(
$User.ProfileId = &quot;00ea0000001sdEo&quot;   /* PGi Contract Manager Profile */
),

       OR(
CONTAINS(TEXT(Opportunity.StageName), &quot;Closed Won&quot;),
ISPICKVAL(Opportunity.StageName, &quot;Closed Lost&quot;)
        ),
NOT($Setup.BypassRules__c.Disable_Validation_Rules__c) 		
/*
 Opportunity.of_Historical_Line_Items__c = 0
*/
)</errorConditionFormula>
        <errorMessage>This Opportunity has been closed. No updates are permitted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>One_Time_Event_Contract_Term</fullName>
        <active>true</active>
        <description>When &quot;One Time Event&quot; Billing Frequency is selected, Contract Term can only be a value of 1.</description>
        <errorConditionFormula>AND(  ISPICKVAL(Billing_Frequency__c, &apos;One Time Event&apos;), Contract_Term__c != 1, $User.Override_Validation_Rules__c = False )</errorConditionFormula>
        <errorDisplayField>Contract_Term__c</errorDisplayField>
        <errorMessage>The Contract Term can only be a value of 1 when One Time Event is selected as the Billing Frequency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Partners_Can_Select_Contract</fullName>
        <active>true</active>
        <description>Only Partners can select the Contract unit type.</description>
        <errorConditionFormula>AND(
OR(
!ISPICKVAL($User.Channel__c, &quot;Partners&quot;),
!Contains($Profile.Name , &quot;Partner&quot;)
),
ISPICKVAL(Unit_Type__c, &quot;Contract&quot;),
!Contains($Profile.Name , &quot;Admin&quot;)
)</errorConditionFormula>
        <errorDisplayField>Unit_Type__c</errorDisplayField>
        <errorMessage>Only Partners can select the Contract unit type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_BD_requires_unit_type_Contract</fullName>
        <active>true</active>
        <description>Partner BD requires unit type Contract</description>
        <errorConditionFormula>AND(
Contains(Product2.Name, &quot;Partner&quot;),
$User.Override_Validation_Rules__c = false, 
!ISPICKVAL(Unit_Type__c, &quot;Contract&quot;)
)</errorConditionFormula>
        <errorDisplayField>Unit_Type__c</errorDisplayField>
        <errorMessage>The Unit Type for Partner BD must be Contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xCannot_select_American_Product_UnlessNA</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(Opportunity.Owner_Region__c = &quot;NA&quot;),
!ISPICKVAL($User.Channel__c, &quot;Canada&quot;),
CONTAINS( Product2.Name ,&quot;American&quot;) ||
CONTAINS( Product2.Name ,&quot;PGI Standard&quot;)
)</errorConditionFormula>
        <errorDisplayField>Product_Name1__c</errorDisplayField>
        <errorMessage>You cannot select a product starting with American unless the Opportunity Owner Region = NA or Channel = Canada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xCannot_select_nonAmerican_Prod_UnlessNA</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
OR(Opportunity.Owner_Region__c = &quot;NA&quot;, 
ISPICKVAL(Opportunity.Channel__c, &quot;Canada&quot;) 
), 
NOT( 
CONTAINS( Product2.Name ,&quot;American&quot;) 
), 
NOT( 
CONTAINS( Product2.Name ,&quot;PGI Standard&quot;) 
), 
ISNEW(), 
$User.ProfileId &lt;&gt; &quot;00ea0000001sdEo&quot; 
)</errorConditionFormula>
        <errorDisplayField>Product_Name1__c</errorDisplayField>
        <errorMessage>You can only select products starting with American for NA/Canada region Opportunities.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>xCannot_set_Existing_Customer_if_not_NA</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
NOT(
Opportunity.Owner_Region__c = &quot;NA&quot;
),
Existing_Service__c = True
)</errorConditionFormula>
        <errorMessage>You cannot use this field unless the Opportunity Owner is in the NA region.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x_Cannot_be_negative_unit_price</fullName>
        <active>false</active>
        <errorConditionFormula>New_Sales_Price__c &lt; 0</errorConditionFormula>
        <errorDisplayField>New_Sales_Price__c</errorDisplayField>
        <errorMessage>Please set the Unit Price to a positive value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x_Cannot_be_positive_when_existing_custo</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
Existing_Service__c = True,
New_Sales_Price__c &gt; 0
)</errorConditionFormula>
        <errorDisplayField>New_Sales_Price__c</errorDisplayField>
        <errorMessage>Please set the Unit Price to a negative value when Existing Service is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x_Lockdown_LineitemsrelatedtoQ_C</fullName>
        <active>false</active>
        <description>Makes any Opp Products that have a relationship to the Q/C uneditable unless the isEditable is set to True.  This will only be the case when the trigger updates/inserts/deletes records as they are edited/created/deleted on the Q/C record.</description>
        <errorConditionFormula>AND(
! ISBLANK(Package__c),
isEditable__c = False
)</errorConditionFormula>
        <errorMessage>This record has been created through the Q/C process. All changes should be made by configuring the package on the Q/C record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x_One_Time_Event_Unit_Type_not_in_use</fullName>
        <active>false</active>
        <description>Unit Type can only be Ancillary or Minutes when Billing Frequency is One Time Event.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Billing_Frequency__c, &quot;One Time Event&quot;), !ISPICKVAL(Unit_Type__c, &quot;Ancillary&quot;),  !ISPICKVAL(Unit_Type__c, &quot;Minutes&quot;)
)</errorConditionFormula>
        <errorDisplayField>Unit_Type__c</errorDisplayField>
        <errorMessage>Unit Type must be either Ancillary or Minutes when One Time Event is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>x_cannot_be_active_host_unless_Web_GM</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
Active_Host_NA_Only__c  = True, 
!CONTAINS(PricebookEntry.Product2.Name, &quot;Web: GlobalMeet&quot;), 
NOT(Opportunity.Owner_Region__c = &quot;APAC&quot;),
ISBLANK(Package__c),
/* $User.Override_Validation_Rules__c = false, */
DATEVALUE(CreatedDate) &gt; DATE(2014,01,07)
)</errorConditionFormula>
        <errorDisplayField>Active_Host_NA_Only__c</errorDisplayField>
        <errorMessage>The Active Host checkbox cannot be selected unless the Product is Web: GlobalMeet. Please uncheck Active Host before continuing.</errorMessage>
    </validationRules>
</CustomObject>